# octoopt

./: .dockerignore  .gitignore  Dockerfile  Makefile  agileocto.py  givenergy.py  main.py  manage.py  octoapi.py  pyproject.toml  report.py  settings.json
db/: models.py
